troquei o nome de index para indes

--- a/indes.html
+++ b/indes.html
@@ -21,7 +21,7 @@
             <img class="imgtamanho2" src="assets/img/imagem 1.jpg" >
         </div>
 
-        <h2 class="fonte margemtit tamanho">Introdução3,</h2>
+        <h2 class="fonte margemtit tamanho">Introdução</h2>
         <p class="fonte centralizar">
             Vivemos em uma época em que os desafios ambientais e econômicos estão cada vez mais evidentes. Para lidar com essas questões urgentes, é imperativo repensar e reformular nosso modelo econômico. A Economia Circular surge como uma resposta crucial a esses desafios, propondo uma abordagem inovadora e sustentável para o uso de recursos.        </p>
 
