--- a/Logica-Programacao.html
+++ b/Logica-Programacao.html
@@ -12,10 +12,10 @@
                 <div>
                     <img src="assets/img/logosenai.png">
                     <div class="cabecalho">
-                    <a class="botcabecalho" href="https://google.com"><bottom>Segurança no Trabalho</bottom></a>
-                    <a class="botcabecalho" href="https://google.com"><bottom>Home</bottom></a>
-                    <a class="botcabecalho" href="https://google.com"><bottom>Economia Circular</bottom></a>
-                    <a class="botcabecalho" href="https://google.com"><bottom>Desvendando 5G</bottom></a>
+                    <a class="botcabecalho" href="Protecao-no-trabalho.html"><bottom>Segurança no Trabalho</bottom></a>
+                    <a class="botcabecalho" href="index.html"><bottom>Home</bottom></a>
+                    <a class="botcabecalho" href="indes.html"><bottom>Economia Circular</bottom></a>
+                    <a class="botcabecalho" href="5g.html"><bottom>Desvendando 5G</bottom></a>
                 </div>
             </header>
         </section>
