--- a/Protecao-no-trabalho.html
+++ b/Protecao-no-trabalho.html
@@ -10,10 +10,10 @@
         <header>
             <img src="assets/img/logosenai.png">
             <div class="cabecalho">
-                <a class="botcabecalho" href="https://google.com"><bottom>Home</bottom></a>
-                <a class="botcabecalho" href="https://google.com"><bottom>Lógica de Programação</bottom></a>
-                <a class="botcabecalho" href="https://google.com"><bottom>Economia Circular</bottom></a>
-                <a class="botcabecalho" href="https://google.com"><bottom>Desvendando 5G</bottom></a>
+                <a class="botcabecalho" href="index.html"><bottom>Home</bottom></a>
+                <a class="botcabecalho" href="Logica-Programacao.html"><bottom>Lógica de Programação</bottom></a>
+                <a class="botcabecalho" href="indes.html"><bottom>Economia Circular</bottom></a>
+                <a class="botcabecalho" href="5g.html"><bottom>Desvendando 5G</bottom></a>
             </div>
         </header>
 <br>
