--- a/indes.html
+++ b/indes.html
@@ -8,10 +8,10 @@
     <header>
         <img src="assets/img/logosenai.png">
         <div class="cabecalho">
-            <a class="botcabecalho" href="https://google.com"><bottom>Segurança no Trabalho</bottom></a>
-            <a class="botcabecalho" href="https://google.com"><bottom>Lógica de Programação</bottom></a>
-            <a class="botcabecalho" href="https://google.com"><bottom>Home</bottom></a>
-            <a class="botcabecalho" href="https://google.com"><bottom>Desvendando 5G</bottom></a>
+            <a class="botcabecalho" href="Protecao-no-trabalho.html"><bottom>Segurança no Trabalho</bottom></a>
+            <a class="botcabecalho" href="Logica-Programacao.html"><bottom>Lógica de Programação</bottom></a>
+            <a class="botcabecalho" href="index.html"><bottom>Home</bottom></a>
+            <a class="botcabecalho" href="5g.html"><bottom>Desvendando 5G</bottom></a>
         </div>
     </header>
     <body>
