troquei os links

--- a/indes.html
+++ b/indes.html
@@ -8,9 +8,9 @@
     <header>
         <img src="assets/img/logosenai.png">
         <div class="cabecalho">
-            <a class="botcabecalho" href="https://google.com"><bottom>Segurança no Trabalho</bottom></a>
-            <a class="botcabecalho" href="https://google.com"><bottom>Lógica de Programação</bottom></a>
-            <a class="botcabecalho" href="https://google.com"><bottom>Home</bottom></a>
+            <a class="botcabecalho" href="Protecao-no-trabalho.html"><bottom>Segurança no Trabalho</bottom></a>
+            <a class="botcabecalho" href="Logica-Programacao.html"><bottom>Lógica de Programação</bottom></a>
+            <a class="botcabecalho" href=""><bottom>Home</bottom></a>
             <a class="botcabecalho" href="https://google.com"><bottom>Desvendando 5G</bottom></a>
         </div>
     </header>
