tirou imagem em conflito

--- a/Logica-Programacao.html
+++ b/Logica-Programacao.html
@@ -29,7 +29,7 @@
                 É o conjunto de princípios e técnicas que permitem a criação de algoritmos eficientes e funcionais, 
                 essenciais para resolver problemas de forma estruturada e lógica.</p>
                 <br>
-                    <img class="r8" src="assets/img/imagem 1.jpg" alt="">
+                    <img class="r8" src="assets/img/imagemc1.jpg" alt="">
                 <br>
                 <p>Imagine a lógica de programação como a linguagem comum entre humanos e computadores. 
                 Enquanto nós, seres humanos, nos comunicamos através de palavras e frases, os computadores entendem instruções precisas e sequenciais, 
@@ -38,7 +38,7 @@
                 <p>Dominar a lógica de programação não apenas capacita os programadores a escreverem códigos mais eficientes e organizados, 
                     mas também desenvolve habilidades de resolução de problemas e pensamento crítico. 
                     É como aprender um novo idioma: quanto mais você pratica, mais fluente se torna na linguagem da programação.</p>
-                <img class="r4" src="assets/img/imagem 2.jpg" alt="">
+                <img class="r4" src="assets/img/imagemc2.jpg" alt="">
 
                 <p>Em resumo, a lógica de programação proporciona desde os conceitos básicos até técnicas avançadas, 
                 proporcionando uma base sólida para quem deseja iniciar sua jornada no vasto universo da computação e da programação. 
